--- a/index.html
+++ b/index.html
@@ -922,21 +922,35 @@
       <div class="tab-content" id="nav-tabContent">
         <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
             <!-- firts col row -->
-            <div class="row">
+            <div class="row mt-3">
                 <div class="col-6">
                 <div class="row h-100">
                     <div class="col-6">
-                        <a href="#">
-                        <div class="card h-100" style="background-image: url('gog-assets/tile (14).jpg'); background-size: cover;">
+                        <div class="card h-100 now-on-sale">
+                            <a href="#" style="background-image: url('gog-assets/tile (13).jpg');">
+                                <div class="now-sale-col">
+                                    <h3>Weekly Sale</h3>
+                                    <div class="text-sale">
+                                        <h5>Up to</h5><h1>-70%</h1>
+                                    </div>
+                                    <span>5d 3h 10m</span>
+                                </div>
+                            </a>
                         </div>
-                    </a>
                     </div>
                         
                     <div class="col-6">
-                        <a href="#">
-                        <div class="card h-100" style="background-image: url('gog-assets/tile (13).jpg'); background-size: cover;">
+                        <div class="card h-100 now-on-sale">
+                            <a href="#" style="background-image: url('gog-assets/tile (17).jpg');">
+                                <div class="now-sale-col">
+                                    <h3>Weekly Sale</h3>
+                                    <div class="text-sale">
+                                        <h5>Up to</h5><h1>-90%</h1>
+                                    </div>
+                                    <span>5d 3h 10m</span>
+                                </div>
+                            </a>
                         </div>
-                    </a>
                     </div>
             
                 </div>
