--- a/index.html
+++ b/index.html
@@ -1212,7 +1212,7 @@
       <!-- SECTION DISCOVER GAMES -->
 
 <div class="row mt-3">
-    <div class="col-8">
+    <div class="col-8 pr-5">
         <nav>
             <div class="nav nav-tabs bottom-bar" id="nav-tab" role="tablist">
                 <i class="fas fa-compass"></i>
@@ -1229,7 +1229,7 @@
               <!-- games for u -->
             <div class="tab-pane fade show active" id="nav-games" role="tabpanel" aria-labelledby="nav-games-tab">
                 <div class="col-12 pt-3 pl-0">
-                    <div class="row pr-4">
+                    <div class="row pr-0">
                         <!-- LIST -->
                         <div class="col-12">
                             <a href="#" class="unset">
@@ -1246,7 +1246,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-3 to-center">
+                                    <div class="col-3 d-flex price justify-content-end my-auto">
                                         <p class="text-right">$ 56.99</p>
                                     </div>
                                 </div>
@@ -1269,7 +1269,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="d-flex justify-content-between price to-center">
+                                    <div class="col-3 d-flex price justify-content-end my-auto">
                                         <div class="sale">
                                             <h5>-15%</h5>
                                         </div>
@@ -1297,7 +1297,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="d-flex justify-content-between price to-center">
+                                    <div class="col-3 d-flex price justify-content-end my-auto">
                                         <div class="sale">
                                             <h5>-30%</h5>
                                         </div>
@@ -1315,6 +1315,58 @@
                             <a href="#" class="unset">
                             <div class="row">
                                     <div class="col-3">
+                                        <img width="100%" src="gog-assets/tile (27).jpg" alt="">
+                                    </div>
+                                    <div class="col-6">
+                                        <div class="game-tags">
+                                            <p>Helfire</p>
+                                            <div>
+                                                <span class="wishlist"><i class="fas fa-heart mr-2"></i></i></i>Wishlisted</span>
+                                                <i class="fab fa-windows text-muted ml-2"></i>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-3 d-flex price justify-content-end my-auto">
+                                        <div class="sale">
+                                            <h5>-25%</h5>
+                                        </div>
+                                        <div class="sale-right">
+                                            <small class="text-muted">$21.99</small>
+                                            <p>$ 15.49</p>
+                                        </div>
+                                    </div>                                
+                                </div>
+                            </a>
+                            <hr>
+                        </div>
+                        <!-- LIST -->
+                        <div class="col-12">
+                            <a href="#" class="unset">
+                            <div class="row">
+                                    <div class="col-3">
+                                        <img width="100%" src="gog-assets/tile (22).jpg" alt="">
+                                    </div>
+                                    <div class="col-6 to-center">
+                                        <div class="game-tags">
+                                            <p>CyberPunk 2077</p>
+                                            <div>
+                                                <span><i class="far fa-calendar-alt mr-2"></i>Soon</span>
+                                                <i class="fab fa-windows text-muted ml-2"></i>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-3 d-flex price justify-content-end my-auto">
+                                        <p class="text-right">$ 56.99</p>
+                                    </div>
+                                </div>
+                            </a>
+                            <hr>
+                        </div>
+                        <!-- 2 -->
+                        <div class="col-12">
+                            <a href="#" class="unset">
+                            <div class="row">
+                                    <div class="col-3">
                                         <img width="100%" src="gog-assets/tile (26).jpg" alt="">
                                     </div>
                                     <div class="col-6">
@@ -1326,7 +1378,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="d-flex justify-content-between price to-center">
+                                    <div class="col-3 d-flex price justify-content-end my-auto">
                                         <div class="sale">
                                             <h5>-15%</h5>
                                         </div>
@@ -1339,23 +1391,124 @@
                             </a>
                             <hr>
                         </div>
+                        <!-- 3 -->
+                        <div class="col-12">
+                            <a href="#" class="unset">
+                            <div class="row">
+                                    <div class="col-3">
+                                        <img width="100%" src="gog-assets/tile (24).jpg" alt="">
+                                    </div>
+                                    <div class="col-6">
+                                        <div class="game-tags">
+                                            <p>Heroes</p>
+                                            <div>
+                                                <i class="fab fa-windows text-muted ml-2"></i>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-3 d-flex price justify-content-end my-auto">
+                                        <div class="sale">
+                                            <h5>-30%</h5>
+                                        </div>
+                                        <div class="sale-right">
+                                            <small class="text-muted">$11.99</small>
+                                            <p>$ 8.49</p>
+                                        </div>
+                                    </div>                                
+                                </div>
+                            </a>
+                            <hr>
+                        </div>
+                        <!-- 4 -->
+                        <div class="col-12">
+                            <a href="#" class="unset">
+                            <div class="row">
+                                    <div class="col-3">
+                                        <img width="100%" src="gog-assets/tile (27).jpg" alt="">
+                                    </div>
+                                    <div class="col-6">
+                                        <div class="game-tags">
+                                            <p>Helfire</p>
+                                            <div>
+                                                <span class="wishlist"><i class="fas fa-heart mr-2"></i></i></i>Wishlisted</span>
+                                                <i class="fab fa-windows text-muted ml-2"></i>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-3 d-flex price justify-content-end my-auto">
+                                        <div class="sale">
+                                            <h5>-25%</h5>
+                                        </div>
+                                        <div class="sale-right">
+                                            <small class="text-muted">$21.99</small>
+                                            <p>$ 15.49</p>
+                                        </div>
+                                    </div>                                
+                                </div>
+                            </a>
+                            <hr>
+                        </div>
 
                     </div>
                 </div>
             </div>
-            <div class="tab-pane fade" id="nav-bests" role="tabpanel" aria-labelledby="nav-bests-tab">
+                <div class="tab-pane fade" id="nav-bests" role="tabpanel" aria-labelledby="nav-bests-tab">
+                </div>
+                <div class="tab-pane fade" id="nav-new" role="tabpanel" aria-labelledby="nav-new-tab">
+                </div>
+                <div class="tab-pane fade" id="nav-upcom" role="tabpanel" aria-labelledby="nav-upcom-tab">
+                </div>
+            </div>    
+            <div class="row">
+                <div>
+                    <button></button>
+                </div>
             </div>
-            <div class="tab-pane fade" id="nav-new" role="tabpanel" aria-labelledby="nav-new-tab">
-            </div>
-            <div class="tab-pane fade" id="nav-upcom" role="tabpanel" aria-labelledby="nav-upcom-tab">
-            </div>
-          </div>    
         </div>
     <div class="col-4 pl-0">
         <div class="d-flex right-featured">
             <i class="fas fa-compass"></i>
             <h5>Featured</h5> 
         </div>
+    <div class="row mt-3 px-3">
+        <div class="col-12 p-0">
+            <img src="gog-assets/tile (23).jpg" width="100%" alt="">
+        </div>
+    </div>
+    <diw class="row">
+        <div class="col-12">
+            <div class="row px-3">
+                <div class="col-6 p-0">
+                    <div class="col p-0">
+                        <img src="gog-assets/tile (23).jpg" width="100%" alt="">
+                    </div>
+                    <div class="col p-0">
+                        <img src="gog-assets/tile (26).jpg" width="100%" alt="">
+                    </div>
+                </div>
+                <div class="col-6 p-0">
+                    <div class="col p-0">
+                        <a href="">
+                            <img src="gog-assets/tile (26).jpg" width="100%" alt="" >
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="row px-3">
+                <div class="col-6 p-0">
+                    <img src="gog-assets/tile (25).jpg" width="100%" alt="">
+                </div>
+                <div class="col-6 p-0">
+                    <img src="gog-assets/tile (23).jpg" width="100%" alt="">
+                </div>
+            </div>
+        </div>
+        <div class="col-6">
+            <div class="row">
+                
+            </div>
+        </div>
+    </diw>
 
     </div>
 </div>
