yay, fixed the image scale

--- a/index.html
+++ b/index.html
@@ -1459,9 +1459,10 @@
                 <div class="tab-pane fade" id="nav-upcom" role="tabpanel" aria-labelledby="nav-upcom-tab">
                 </div>
             </div>    
+            <!-- button -->
             <div class="row">
-                <div>
-                    <button></button>
+                <div class="mx-auto">
+                    <button class="showmore mx-auto">Show more</button>
                 </div>
             </div>
         </div>
@@ -1477,24 +1478,21 @@
     </div>
     <diw class="row">
         <div class="col-12">
-            <div class="row px-3">
+            <div class="row px-3 mt-1">
                 <div class="col-6 p-0">
                     <div class="col p-0">
                         <img src="gog-assets/tile (23).jpg" width="100%" alt="">
                     </div>
-                    <div class="col p-0">
+                    <div class="col p-0 mt-1">
                         <img src="gog-assets/tile (26).jpg" width="100%" alt="">
                     </div>
                 </div>
                 <div class="col-6 p-0">
-                    <div class="col p-0">
-                        <a href="">
-                            <img src="gog-assets/tile (26).jpg" width="100%" alt="" >
+                        <a class="strechy" style="background-image: url('gog-assets/tile (13).jpg');" href="">
                         </a>
-                    </div>
                 </div>
             </div>
-            <div class="row px-3">
+            <div class="row px-3 mt-1">
                 <div class="col-6 p-0">
                     <img src="gog-assets/tile (25).jpg" width="100%" alt="">
                 </div>
