--- a/index.html
+++ b/index.html
@@ -1471,32 +1471,32 @@
             <i class="fas fa-compass"></i>
             <h5>Featured</h5> 
         </div>
-    <div class="row mt-3 px-3">
+    <div class="row mt-3 px-2">
         <div class="col-12 p-0">
             <img src="gog-assets/tile (23).jpg" width="100%" alt="">
         </div>
     </div>
     <diw class="row">
         <div class="col-12">
-            <div class="row px-3 mt-1">
+            <div class="row px-2 mt-1">
                 <div class="col-6 p-0">
-                    <div class="col p-0">
+                    <div class="col p-1">
                         <img src="gog-assets/tile (23).jpg" width="100%" alt="">
                     </div>
-                    <div class="col p-0 mt-1">
+                    <div class="col p-1">
                         <img src="gog-assets/tile (26).jpg" width="100%" alt="">
                     </div>
                 </div>
-                <div class="col-6 p-0">
+                <div class="col-6 p-1">
                         <a class="strechy" style="background-image: url('gog-assets/tile (13).jpg');" href="">
                         </a>
                 </div>
             </div>
-            <div class="row px-3 mt-1">
-                <div class="col-6 p-0">
+            <div class="row px-2">
+                <div class="col-6 p-1">
                     <img src="gog-assets/tile (25).jpg" width="100%" alt="">
                 </div>
-                <div class="col-6 p-0">
+                <div class="col-6 p-1">
                     <img src="gog-assets/tile (23).jpg" width="100%" alt="">
                 </div>
             </div>
