--- a/index.html
+++ b/index.html
@@ -127,23 +127,40 @@
       <h6 class="d-inline">Highlights</h6>
     <hr>
     
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+<div id="carouselExampleIndicators" class="carousel slide w-100" data-ride="carousel">
     <div>
         <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="gog-assets/carousel1.jpg" class="d-block w-100" alt="...">
+            <div class="sliders" style="background-image: url('gog-assets/carousel1.jpg');">
+
+            <div class="footer-price d-flex w-100 justify-content-between p-3">
+                <div class="leftpr d-flex flex-column">
+                    <div>
+                        <span class="blue"><i class="far fa-calendar-alt mr-2"></i>Soon</span>
+                        <i class="fab fa-windows text-muted ml-2"></i>
+                    </div>
+                    <h2 class="mt-2">CyberPunk 2077</h2>
+                </div>
+                <div class="rightpr d-flex justify-content-between">
+                        <h2>$59.99</h2>
+                        <button class="buySlid"><i class="fas fa-shopping-cart"></i> Add to Cart</button>
+                </div>
+            </div>
+            </div>
         </div>
         <div class="carousel-item">
-            <img src="gog-assets/carousel2.jpg" class="d-block w-100" alt="...">
+            <div class="sliders" style="background-image: url('gog-assets/carousel2.jpg');"></div>
         </div>
         <div class="carousel-item">
-            <img src="gog-assets/carousel3.jpg" class="d-block w-100" alt="...">
+            <div class="sliders" style="background-image: url('gog-assets/carousel3.jpg');"></div>
         </div>
         <div class="carousel-item">
-            <img src="gog-assets/carousel6.jpg" class="d-block w-100" alt="...">
+            <div class="sliders" style="background-image: url('gog-assets/carousel6.jpg');"></div>
+
         </div>
         <div class="carousel-item">
-            <img src="gog-assets/carousel5.jpg" class="d-block w-100" alt="...">
+            <div class="sliders" style="background-image: url('gog-assets/carousel5.jpg');"></div>
+
         </div>
     </div>
 </div>
