--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                 <div class="leftpr d-flex flex-column">
                     <div>
                         <span class="blue"><i class="far fa-calendar-alt mr-2"></i>Soon</span>
-                        <i class="fab fa-windows text-muted ml-2"></i>
+                        <i class="fab fa-windows text-white ml-2"></i>
                     </div>
                     <h2 class="mt-2">CyberPunk 2077</h2>
                 </div>
